Fix not showing content for admin when site is disabled
Improve flash notices display

--- a/Resources/public/base/css/contact.css
+++ b/Resources/public/base/css/contact.css
@@ -1,4 +1,3 @@
-.allegro-notice { text-align: center; padding: 10px; background: #DFF2BF; border: 1px solid; color: #4F8A10; margin-bottom: 10px; }
 form.allegro { font-size: 16px; }
 form.allegro div { clear: left; margin-bottom: 10px; }
 form.allegro label { float: left; margin-right: 10px; text-align: right; width: 100px; font-weight: bold; vertical-align: top; padding-top: 10px; }
